--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "dependencies": {},
     "devDependencies": {
         "autoprefixer": "^8.6.0",
+        "babel-preset-env": "^1.7.0",
         "browser-sync": "^2.24.4",
         "css-mqpacker": "^6.0.2",
         "cssnano": "^3.10.0",
         "del": "^3.0.0",
         "gulp": "^3.9.1",
+        "gulp-babel": "^7.0.1",
         "gulp-concat": "^2.6.1",
         "gulp-if": "^2.0.2",
         "gulp-imagemin": "^4.1.0",
